--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,8 +1,26 @@
-.home-page {
+html {
+	font-size: 16px;
+}
+body {
+	font-family: 'Brandon Grotesque','brandon-grotesque',Helvetica,sans-serif; 
+}
+
+ul {
+	list-style: none;
+}
+.btn-primary {
 	background-color: #5C5BE0;
 }
+.home-page {
+}
 .hero-section {
+	width: 100%;
+	height: 100vh;
+	background-color: #5C5BE0;
+}
+.hero-section header {
 	width: 63%;
+	margin: auto;
 }
 .profile-div {
 	display: flex;
@@ -69,9 +87,54 @@ nav ul a:hover {
 .carousel {
 	height: 50%;
 }
-#target-display {
-	height: 79vh;
+.carousel-item {
+	position: relative;
+	top: 50px;
+	left:36%;
+	background: #EEEEEE;
+	width: 240px;
+	height: 260px;
 }
-.my-carousel-item {
-	height: 50%;
+.bg-flowers {
+	width: 240px;
+	height: 120px;
+	background-color: #EEEEEE;
+}
+.bg-flowers img {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+.carousel .profile-div {
+	position: absolute;
+	top: 90px;
+	left: 90px;
+}
+
+
+
+.about-section {
+	padding: 30px;
+}
+.recent-posts {
+	background-color: #F9F9F9;
+}
+.post-profile {
+	border-radius: 50%;
+	width: 45px;
+	height: 45px;
+	background-color: #CCCCCC;
+}
+.footer-section {
+	background-color: #5C5BE0;
+	color: #EEEEEE;
+}
+.upper-footer a {
+	color: #EEEEEE;
+
+}
+.copyright {
+	background-color: #1C1B8E;
+	color: #EEEEEE;
+	font-size: 10px;
 }
